syntax = "proto3";

package ibc.applications.router.v1;

import "gogoproto/gogo.proto";
import "ibc/applications/router/v1/genesis.proto";
import "google/api/annotations.proto";

option go_package = "github.com/cosmos/ibc-go/modules/apps/router/types";

// Query provides defines the gRPC querier service.
service Query {
  // Params queries all parameters of the router module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/ibc/apps/router/v1/params";
  }
}

// QueryParamsRequest is the request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params defines the parameters of the module.
  Params params = 1;
}
